added tailwind css

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Aniruddha",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "react": "18.3",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.2"
+    "react-router-dom": "^6.30.2",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "parcel": "^2.16.1"
