--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
   "author": "Aniruddha",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
     "react": "18.3",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.2",
-    "tailwindcss": "^4.1.17"
+    "react-is": "^18.3.1",
+    "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
     "parcel": "^2.16.1"
+  },
+  "overrides": {
+    "react-is": "^18.3.1"
   }
 }
