--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Aniruddha",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/postcss": "^4.1.17",
     "react": "18.3",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.2",
     "tailwindcss": "^4.1.17"
   },
