--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "axios": "^1.13.2",
     "react": "18.3",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
@@ -18,6 +19,7 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.16.1"
   }
 }
